--- a/web/index.html
+++ b/web/index.html
@@ -2,15 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Telegram Mini App</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="icons/Icon-192.png" />
-
     <style>
       html, body {
         height: 100%;
@@ -44,12 +39,11 @@
     <script src="flutter.js" defer></script>
     <script>
       window.addEventListener('load', function () {
-        _flutter.loader.loadEntrypoint({
-          onEntrypointLoaded: function (engineInitializer) {
-            engineInitializer.initializeEngine().then(function (appRunner) {
-              appRunner.runApp();
-            });
-          }
+        if ('serviceWorker' in navigator) {
+          // navigator.serviceWorker.register('flutter_service_worker.js');
+        }
+        _flutter.loader.load({
+          entrypointUrl: 'main.dart.js',
         });
       });
     </script>
